# claude-code-watch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TODO.md  VERSIONING.md  claude-usage  claude-watch  claude_watch.py  install.sh  pyproject.toml
.claude/: CLAUDE.md  TODO.md
.github/workflows/: release.yml  test.yml
.serena/: project.yml
completions/: claude-watch.bash  claude-watch.fish  claude-watch.zsh
contrib/claude-code/: status-line.sh
contrib/grafana/: claude-watch-dashboard.json
contrib/i3status/: claude-watch.sh
contrib/waybar/: claude-watch.sh
docs/: BRANCH_PROTECTION.md  FEATURES.md
src/claude_watch/: __init__.py  __main__.py  _version.py  cli.py  errors.py
src/claude_watch/api/: __init__.py  cache.py  client.py  retry.py
src/claude_watch/config/: __init__.py  audit.py  credentials.py  security.py  settings.py
src/claude_watch/display/: __init__.py  analytics.py  colors.py  progress.py  prompt.py  spinner.py  tmux.py  usage.py  watch.py
src/claude_watch/export/: __init__.py  exporter.py
src/claude_watch/forecast/: __init__.py  forecaster.py
src/claude_watch/health/: __init__.py  checker.py
src/claude_watch/history/: __init__.py  storage.py
src/claude_watch/hooks/: __init__.py  generator.py
src/claude_watch/integrations/: __init__.py  statusline.py
src/claude_watch/metrics/: __init__.py  server.py
src/claude_watch/notify/: __init__.py  notifier.py
src/claude_watch/reports/: __init__.py  generator.py
src/claude_watch/setup/: __init__.py  completion.py  systemd.py  wizard.py
src/claude_watch/update/: __init__.py  checker.py
src/claude_watch/utils/: __init__.py  platform.py  time.py
src/claude_watch/webhook/: __init__.py  sender.py
tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_formatting.py  test_time.py  test_tmux.py  test_update.py  test_watch.py
tests/fixtures/: api_responses.json
