[project]
name = "claude-watch"
version = "0.1.0"
description = "CLI tool to monitor Claude Code subscription usage limits"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Claude Code Watch Contributors"}
]
keywords = ["claude", "anthropic", "cli", "usage", "monitoring", "watch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []  # Zero dependencies - stdlib only

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
claude-watch = "claude_watch:main"
ccw = "claude_watch:main"

[project.urls]
Homepage = "https://github.com/Asi0Flammeus/claude-code-watch"
Repository = "https://github.com/Asi0Flammeus/claude-code-watch"
Issues = "https://github.com/Asi0Flammeus/claude-code-watch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["claude_watch.py"]

[tool.hatch.build.targets.sdist]
only-include = ["claude_watch.py", "README.md", "LICENSE", "pyproject.toml"]

# ═══════════════════════════════════════════════════════════════════════════════
# Testing Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring network access",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ═══════════════════════════════════════════════════════════════════════════════
# Linting Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Test files use exec() to load functions dynamically, causing false positives
"tests/test_*.py" = ["F821", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["claude_watch"]

# ═══════════════════════════════════════════════════════════════════════════════
# Security Scanning Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert warnings in non-test code

# ═══════════════════════════════════════════════════════════════════════════════
# Type Checking Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Strict mode settings (gradually enable)
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# Exclude test files from type checking
exclude = ["tests/", "env/", ".venv/"]
