[project]
name = "claude-watch"
dynamic = ["version"]
description = "CLI tool to monitor Claude Code subscription usage limits"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Claude Code Watch Contributors"}
]
keywords = ["claude", "anthropic", "cli", "usage", "monitoring", "watch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []  # Zero dependencies - stdlib only

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
# Primary: use standalone claude_watch.py (no src/ dependency)
# When full migration is complete, change to: claude_watch.cli:main
claude-watch = "claude_watch:main"
ccw = "claude_watch:main"

[project.urls]
Homepage = "https://github.com/Asi0Flammeus/claude-code-watch"
Repository = "https://github.com/Asi0Flammeus/claude-code-watch"
Issues = "https://github.com/Asi0Flammeus/claude-code-watch/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Dynamic version from _version.py
[tool.hatch.version]
path = "src/claude_watch/_version.py"

# Source layout configuration
[tool.hatch.build.targets.wheel]
packages = ["src/claude_watch"]
# Also include standalone script during transition
artifacts = ["claude_watch.py", "completions"]

[tool.hatch.build.targets.sdist]
include = [
    "src/claude_watch",
    "claude_watch.py",
    "completions",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "tests",
]

# ═══════════════════════════════════════════════════════════════════════════════
# Testing Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Use importlib mode to avoid claude_watch.py shadowing src/claude_watch/ package
# This is essential because pytest adds project root to sys.path by default
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring network access",
]

[tool.coverage.run]
source = ["src/claude_watch", "claude_watch.py"]
omit = ["tests/*", "setup.py", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ═══════════════════════════════════════════════════════════════════════════════
# Linting Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Test files may have unused imports from conftest fixtures
"tests/test_*.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["claude_watch"]

# ═══════════════════════════════════════════════════════════════════════════════
# Security Scanning Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # Skip assert warnings in non-test code

# ═══════════════════════════════════════════════════════════════════════════════
# Type Checking Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Strict mode settings (gradually enable)
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# Exclude test files from type checking
exclude = ["tests/", "env/", ".venv/"]
